--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -11,55 +11,56 @@
   width: 95%;
   margin: 0 auto;
   justify-content: space-between;
-}
 
-.link {
-  color: $clr-primary;
-  padding: 0 0 0.3em 0;
-  position: relative;
-}
+  .link {
+    color: $clr-primary;
+    padding: 0 0 0.3em 0;
+    position: relative;
+    &:hover {
+      color: $clr-primary;
+    }
 
-.link:hover {
-  color: $clr-primary;
-}
+    &::before {
+      content: '';
+      display: inline;
+      width: 0%;
+      height: 0.2em;
+      position: absolute;
+      bottom: 0;
+      background-color: $clr-primary;
+      transition: width 0.2s ease-in;
+    }
 
-.link::before {
-  content: '';
-  display: inline;
-  width: 0%;
-  height: 0.2em;
-  position: absolute;
-  bottom: 0;
-  background-color: $clr-primary;
-  transition: width 0.2s ease-in;
-}
+    &:hover::before,
+    &:focus::before {
+      width: 100%;
+    }
+  }
 
-.link:hover::before,
-.link:focus::before {
-  width: 100%;
-}
+  .nav {
+    .link--nav {
+      color: $clr-fg;
+      text-transform: lowercase;
+      font-weight: 500;
+    }
 
-.link--nav {
-  color: $clr-fg;
-  text-transform: lowercase;
-  font-weight: 500;
-}
+    /* .link--icon {
+      color: $clr-fg;
+      font-size: 1.2rem;
+    } */
 
-.link--icon {
-  color: $clr-fg;
-  font-size: 1.2rem;
-}
+    .nav__list {
+      margin-right: 1.5em;
+      display: flex;
+    }
 
-.nav__list {
-  margin-right: 1.5em;
-  display: flex;
-}
+    .nav__list-item {
+      margin-left: 1.5em;
+    }
 
-.nav__list-item {
-  margin-left: 1.5em;
-}
-
-.nav__hamburger {
-  display: none;
-  width: 1em;
+    /* .nav__hamburger {
+      display: none;
+      width: 1em;
+    } */
+  }
 }
