feat: add comp Contact, Fotter, Scroll; reafac: styles; T: 25-01-2025 11:49

--- a/src/components/Contact/index.module.scss
+++ b/src/components/Contact/index.module.scss
@@ -1,5 +1,22 @@
 @import '../../styles/vars';
+@import '../../styles/mixins';
 
 .contact {
   flex-direction: column;
+}
+
+.section{
+  @include section;
+}
+
+.center{
+  @include center;
+}
+
+.btn{
+  @include btn;
+}
+
+.btnOutline {
+  @include btnOutline;
 }
