--- a/src/components/About/index.module.scss
+++ b/src/components/About/index.module.scss
@@ -1,8 +1,8 @@
 @import '../../styles/vars';
+@import '../../styles/mixins';
 
 .center {
-  display: flex;
-  align-items: center;
+  @include center;
 }
 
 .about {
@@ -37,54 +37,13 @@
 }
 
 .btn {
-  display: block;
-  padding: 0.8em 1.4em;
-  font-weight: 500;
-  font-size: 0.9rem;
-  text-transform: lowercase;
-  transition: transform 0.2s ease-in-out;
+  @include btn;
 }
 
 .btnOutline {
-  color: $clr-primary;
-  border: 2px solid $clr-primary;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-
-.btnOutline:focus,
-.btnOutline:hover {
-  color: $clr-bg;
-}
-
-.btnOutline:before {
-  content: '';
-  position: absolute;
-  background-color: $clr-primary;
-  right: 100%;
-  bottom: 0;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  transition: right 0.2s ease-in-out;
-}
-
-.btnOutline:hover::before,
-.btnOutline:focus::before {
-  right: 0;
+  @include btnOutline;
 }
 
 .btnIcon {
-  padding: 0;
-  font-size: 1.2rem;
-}
-
-.btnIcon:hover,
-.btnIcon:focus {
-  color: $clr-primary;
-}
-
-.btnIcon:active {
-  transform: translateY(-5px);
+  @include btnIcon;
 }
