--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -33,15 +33,15 @@
   }
 
   .nav {
-    .navLink{
+    .navLink {
       color: $clr-fg;
       font-weight: 500;
     }
 
-    /* .link--icon {
+    .linkIcon {
       color: $clr-fg;
       font-size: 1.2rem;
-    } */
+    }
 
     .navList {
       margin-right: 1.5em;
@@ -52,9 +52,22 @@
       margin-left: 1.5em;
     }
 
-    /* .nav__hamburger {
+    .navHamburger {
       display: none;
       width: 1em;
-    } */
+    } 
+  }
+
+  .btnIconWrapper{
+    display: flex;
+    gap:10px;
+  }
+
+  .btn {
+    @include btn;
+  }
+
+  .btnIcon {
+    @include btnIcon;
   }
 }
