feat: add comp ToogleLanguage, ToogleTheme, styles; T: 27-01-2025 01:13

--- a/src/components/About/index.module.scss
+++ b/src/components/About/index.module.scss
@@ -6,11 +6,15 @@
 }
 
 .about {
+/*   h1 {
+    background: url('../../assets/img/a.jpg') no-repeat center/cover;
+  } */
+
   flex-direction: column;
   margin-top: 3em;
 
   .aboutName {
-    color: $clr-primary;
+    color: var(--clr-primary);
   }
 
   .aboutRole {
