--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,57 @@
-$clr-bg: #fcfcfc;
-$clr-bg-alt: #fff;
-$clr-fg: #555;
-$clr-fg-alt: #444;
-$clr-primary: #2978b5;
-$shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+:root {
+  --clr-black: #000;
+  --clr-gray: #666;
+  --clr-light-gray: #999;
+  --clr-dark-gray: #333;
+  --clr-light: #f0f0f0;
+}
+
+.light {
+  --clr-bg: #fcfcfc;
+  --clr-bg-alt: #fff;
+  --clr-fg: #555;
+  --clr-fg-alt: #444;
+  --clr-primary: #2978b5;
+  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.dark {
+  --clr-bg: #23283e;
+  --clr-bg-alt: #2a2f4c;
+  --clr-fg: #bdbddd;
+  --clr-fg-alt: #cdcdff;
+  --clr-primary: #90a0d9;
+  --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+// .app  {
+//   --clr-bg: #ffffff;
+//   --clr-bg-alt: #f9f9f9;
+//   --clr-fg: #222222;
+//   --clr-fg-alt: #444444;
+//   --clr-primary: #4a90e2;
+//   --shadow: rgba(0, 0, 0, 0.1) 0px 5px 20px 0px,
+//     rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+// }
+
+// $clr-bg: #fcfcfc;
+// $clr-bg-alt: #fff;
+// $clr-fg: #555;
+// $clr-fg-alt: #444;
+// $clr-primary: #2978b5;
+// $shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+// $clr-black: #000;
+// $clr-gray: #666;
+// $clr-light-gray: #999;
+// $clr-dark-gray: #333;
+// $clr-light: #f0f0f0;
+
+// $clr-bg: #23283e;
+// $clr-bg-alt: #2a2f4c;
+// $clr-fg: #bdbddd;
+// $clr-fg-alt: #cdcdff;
+// $clr-primary: #90a0d9;
+// $shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+//   rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
