--- a/src/components/ContactForm/index.module.scss
+++ b/src/components/ContactForm/index.module.scss
@@ -3,7 +3,7 @@
 
 .contactFormContainer {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background: white;
+  background: var(--clr-bg-alt);
   padding: 2rem;
   max-width: 80rem;
   text-align: right;
@@ -15,7 +15,7 @@
   }
 
   .contactFormLabel {
-    color: #666;
+    color: var(--clr-gray);
     font-size: 1rem;
     letter-spacing: 1px;
     font-weight: 700;
@@ -24,18 +24,18 @@
   }
 
   .contactFormInput {
-    color: #333;
+    color: var(--clr-dark-gray);
     padding: 1rem;
     width: 100%;
     border: 1px solid #ebebeb;
     font-size: 1rem;
     letter-spacing: 0px;
-    background: #f0f0f0;
+    background: var(--clr-light);
     border-radius: 5px;
     font-weight: 600;
 
     &::placeholder {
-      color: #999;
+      color: var(--clr-light-gray);
       font-weight: 600;
       font-size: 1rem;
     }
