--- a/src/components/Skills/index.module.scss
+++ b/src/components/Skills/index.module.scss
@@ -15,7 +15,7 @@
 
 .btnPlain {
   text-transform: initial;
-  background-color: $clr-bg-alt;
+  background-color: var(--clr-bg-alt);
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
   border: 0;
 
