--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,21 +18,21 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.5;
-  color: $clr-fg;
-  background-color: $clr-bg;
+  color: var(--clr-fg);
+  background-color: var(--clr-bg);
 }
 
 ::-moz-selection {
-  background: $clr-primary;
-  color: var$clr-bg;
+  background: var(--clr-primary);
+  color: var(--clr-bg);
 }
 
 ::-webkit-selection,
 ::selection {
-  background: var$clr-primary;
-  color: var$clr-bg;
+  background: var(--clr-primary);
+  color: var(--clr-bg);
 }
 
 h1,
@@ -40,7 +40,7 @@ h2,
 h3,
 h4 {
   line-height: 1.2;
-  color: var$clr-fg-alt;
+  color: var(--clr-fg-alt);
 }
 
 h1 {
