feat: add comp Project; refac: styles T: 28-01-2025 21:35

--- a/src/components/About/index.module.scss
+++ b/src/components/About/index.module.scss
@@ -1,12 +1,12 @@
-@import '../../styles/vars';
-@import '../../styles/mixins';
+@use '../../styles/vars';
+@use '../../styles/mixins' as mixins;
 
 .center {
-  @include center;
+  @include mixins.center;
 }
 
 .about {
-/*   h1 {
+  /*   h1 {
     background: url('../../assets/img/a.jpg') no-repeat center/cover;
   } */
 
@@ -41,13 +41,13 @@
 }
 
 .btn {
-  @include btn;
+  @include mixins.btn;
 }
 
 .btnOutline {
-  @include btnOutline;
+  @include mixins.btnOutline;
 }
 
 .btnIcon {
-  @include btnIcon;
+  @include mixins.btnIcon;
 }
