--- a/src/components/ToggleTheme/index.module.scss
+++ b/src/components/ToggleTheme/index.module.scss
@@ -1,10 +1,10 @@
-@import '../../styles/vars';
-@import '../../styles/mixins';
+@use '../../styles/vars';
+@use '../../styles/mixins' as mixins;
 
 .btn {
-  @include btn;
+  @include mixins.btn;
 }
 
 .btnIcon {
-  @include btnIcon;
+  @include mixins.btnIcon;
 }
