--- a/src/components/Contact/index.module.scss
+++ b/src/components/Contact/index.module.scss
@@ -1,22 +1,22 @@
-@import '../../styles/vars';
-@import '../../styles/mixins';
+@use '../../styles/vars';
+@use '../../styles/mixins' as mixins;
 
 .contact {
   flex-direction: column;
 }
 
-.section{
-  @include section;
+.section {
+  @include mixins.section;
 }
 
-.center{
-  @include center;
+.center {
+  @include mixins.center;
 }
 
-.btn{
-  @include btn;
+.btn {
+  @include mixins.btn;
 }
 
 .btnOutline {
-  @include btnOutline;
+  @include mixins.btnOutline;
 }
