--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,8 +1,8 @@
-@import '../../styles/vars';
-@import '../../styles/mixins';
+@use '../../styles/vars';
+@use '../../styles/mixins' as mixins;
 
 .center {
-  @include center;
+  @include mixins.center;
 }
 
 .header {
