--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -1,5 +1,8 @@
 main {
-  max-width: 1100px;
-  width: 95%;
+  // max-width: 1100px;
+  // width: 95%;
   margin: 0 auto;
+  // background: url('../../assets/img/background.png');
+  // background-attachment: fixed;
+  // background: var(--clr-bg);
 }
