--- a/src/components/NavMenu/index.module.scss
+++ b/src/components/NavMenu/index.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/mixins';
+@use '../../styles/mixins' as mixins;
 
 .navWrapper {
   display: flex;
@@ -34,6 +34,6 @@
   }
 
   .link {
-    @include link;
+    @include mixins.link;
   }
 }
