--- a/src/components/Skills/index.module.scss
+++ b/src/components/Skills/index.module.scss
@@ -1,8 +1,8 @@
-@import '../../styles/vars';
-@import '../../styles/mixins';
+@use '../../styles/vars';
+@use '../../styles/mixins' as mixins;
 
 .section {
-  @include section;
+  @include mixins.section;
 }
 
 .skillsListItem {
@@ -10,7 +10,7 @@
 }
 
 .btn {
-  @include btn;
+  @include mixins.btn;
 }
 
 .btnPlain {
