--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,7 +21,10 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.5;
   color: var(--clr-fg);
-  background-color: var(--clr-bg);
+  // background: var(--clr-bg);
+  background: var(--bg);
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 ::-moz-selection {
