--- a/src/components/Projects/index.module.scss
+++ b/src/components/Projects/index.module.scss
@@ -3,13 +3,14 @@
 
 .section {
   @include mixins.section;
+  text-align: center;
 }
 
 .projectsGrid {
   max-width: 1100px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(24em, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(21em, 1fr));
   grid-gap: 2em;
 }
 
