--- a/src/components/Skills/index.module.scss
+++ b/src/components/Skills/index.module.scss
@@ -5,6 +5,11 @@
   @include mixins.section;
 }
 
+.center {
+  @include mixins.center;
+  flex-direction: column;
+}
+
 .skillsListItem {
   margin: 0.5em;
 }
