--- a/src/components/ContactForm/index.module.scss
+++ b/src/components/ContactForm/index.module.scss
@@ -7,7 +7,8 @@
   padding: 2rem;
   max-width: 80rem;
   text-align: right;
-  width: 50%;
+  width: 100%; /* Или больше 700px */
+  max-width: 600px; /* Достаточно места */
   border-radius: 5px;
 
   .contactFormField {
@@ -33,6 +34,7 @@
     background: var(--clr-light);
     border-radius: 5px;
     font-weight: 600;
+    resize: none;
 
     &::placeholder {
       color: var(--clr-light-gray);
