--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -2,6 +2,7 @@ main {
   // max-width: 1100px;
   // width: 95%;
   margin: 0 auto;
+  width: 95%;
   // background: url('../../assets/img/background.png');
   // background-attachment: fixed;
   // background: var(--clr-bg);
