--- a/src/components/Project/index.module.scss
+++ b/src/components/Project/index.module.scss
@@ -9,6 +9,8 @@
   height: 100%;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
+  border: 1px solid #ccc;
+
   &:hover {
     transform: translateY(-7px);
   }
@@ -115,7 +117,7 @@
     color: #fff;
     display: list-item;
     float: left;
-    width: 10px; 
+    width: 10px;
   }
 }
 
