--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -52,6 +52,20 @@ h1 {
 
 h2 {
   font-size: 2rem;
+  position: relative;
+  display: inline-block;
+}
+
+h2::after {
+  content: '';
+  position: absolute;
+  left: -4px;
+  bottom: 2px;
+  width: 100px;
+  height: 10px;
+  background-color: var(--clr-primary);
+  opacity: 0.6;
+  z-index: -1;
 }
 
 h3 {
