--- a/src/components/Project/index.module.scss
+++ b/src/components/Project/index.module.scss
@@ -2,140 +2,93 @@
 
 .project {
   position: relative;
-  //   top: 50%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
   border: 1px solid #ccc;
-
-  &:hover {
-    transform: translateY(-7px);
-  }
+  overflow: hidden;
 }
+
 .project .image {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
+
 .project .image img {
   width: 100%;
   height: 100%;
   transition: 0.5s;
 }
-.card:hover .image img {
-  //   transform: translateX(30%); /*100%*/
-}
+
 .project .details {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 30%; /*100%*/
+  width: 100%;
   height: 100%;
   transition: 0.5s;
-  transform-origin: left;
-  transform: rotateY(-90deg);
+  left: -100%;
 }
-.project:hover .details {
-  transform: rotateY(0deg);
-}
-// .card .details .center {
-//   padding: 20px;
-//   text-align: center;
-//   position: absolute;
-//   top: 50%;
-//   transform: translateY(-50%);
-// }
-// .card .details .center {
-//   margin: 0;
-//   padding: 0;
-//   line-height: 20px;
-//   font-size: 20px;
-//   text-transform: uppercase;
-// }
 
-// .card .details .center span {
-//   font-size: 14px;
-//   color: #262626;
-// }
-// .card .details .center p {
-//   margin: 10px 0;
-//   padding: 0;
-//   color: #fcfcfc;
-// }
-// .card .details .center ul {
-//   margin: 10px auto 0;
-//   padding: 0;
-// }
-// .card .details .center ul li {
-//   list-style: none;
-//   margin: 0 5px;
-// }
-
-// .card .details .center ul li a {
-//   display: block;
-//   background: #262626;
-//   color: #fff;
-//   width: 30px;
-//   height: 30px;
-//   line-height: 30px;
-//   text-align: center;
-//   transform: 0.5s;
-// }
-// .card .details .center ul li a:hover {
-//   background: #ff3636;
-// }
 .details {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  justify-content: space-around;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   padding-left: 10px;
+  width: 100%;
 }
 
-.projectStack {
+.project:hover .details {
+  left: -90%;
+}
+
+.project .details.open {
+  left: 0;
+  transform: translateX(0);
+}
+
+.btnWrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: left;
-  color: #fff;
-  text-align: left;
-  gap: 10px;
+  width: 10%;
   background: none;
-  list-style-type: none;
-  list-style-position: inside;
-}
-
-.projectStackItem {
-  text-indent: 0px;
-  font-weight: 600;
-  &::before {
-    content: '';
-    list-style-type: square;
-    color: #fff;
-    display: list-item;
-    float: left;
-    width: 10px;
+  color: #fff;
+  justify-content: center;
+  &:hover {
+    opacity: 0.8;
+    cursor: pointer;
+  }
+  .btnDetails {
+    width: 100%;
   }
 }
 
-.image {
-  width: 100%;
-  height: 100%;
+.detailsData {
+  background: none;
+  color: #fff;
+  width: 90%;
+  padding: 10px;
+}
+
+.projectText {
+  text-align: justify;
+  margin-bottom: 10px;
 }
 
 .projectTitle {
   color: #fff;
-  background: none;
+}
+
+.openArrow {
+  transform: rotate(180deg);
 }
 
 .linkWrapper {
-  background: none;
   display: flex;
   justify-content: center;
-  gap: 15px;
+  position: absolute;
+  bottom: 10px;
+  gap: 10px;
+  background: none;
 }
 
 .link {
@@ -147,4 +100,11 @@
     text-align: center;
     width: 24px;
   }
+}
+
+.projectStack {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 10px;
 }
