--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,7 +3,6 @@
   --clr-gray: #666;
   --clr-light-gray: #999;
   --clr-dark-gray: #333;
-  --clr-light: #f0f0f0;
 }
 
 .light {
@@ -12,6 +11,7 @@
   --clr-fg: #555;
   --clr-fg-alt: #444;
   --clr-primary: #2978b5;
+  --clr-light: #f0f0f0;
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   --bg: url('../../public/assets/img/background.jpg');
 }
@@ -22,6 +22,7 @@
   --clr-fg: #bdbddd;
   --clr-fg-alt: #cdcdff;
   --clr-primary: #90a0d9;
+  --clr-light: #d4d4fb;
   --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   --bg: url('../../public/assets/img/background_dark.jpg');
