--- a/src/components/ContactForm/index.module.scss
+++ b/src/components/ContactForm/index.module.scss
@@ -7,8 +7,8 @@
   padding: 2rem;
   max-width: 80rem;
   text-align: right;
-  width: 100%; /* Или больше 700px */
-  max-width: 600px; /* Достаточно места */
+  width: 100%;
+  max-width: 600px;
   border-radius: 5px;
 
   .contactFormField {
