--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -43,8 +43,7 @@
     transition: width 0.2s ease-in;
   }
 
-  &:hover::before,
-  &:focus::before {
+  &:hover::before {
     width: 100%;
   }
 }
@@ -65,7 +64,6 @@
   overflow: hidden;
   z-index: 1;
 
-  &:focus,
   &:hover {
     color: var(--clr-bg);
   }
@@ -82,8 +80,7 @@
     transition: right 0.2s ease-in-out;
   }
 
-  &:hover::before,
-  &:focus::before {
+  &:hover::before {
     right: 0;
   }
 }
