--- a/src/components/Project/index.module.scss
+++ b/src/components/Project/index.module.scss
@@ -71,16 +71,19 @@
   color: #fff;
   width: 90%;
   padding: 10px;
+  container-type: inline-size;
 }
 
 .projectDesc {
-  text-align: justify;
+  text-align: left;
   margin-bottom: 10px;
   font-size: 14px;
+  font-size: 5cqw;
 }
 
 .projectTitle {
   color: #fff;
+  font-size: 5cqw;
 }
 
 .openArrow {
@@ -98,12 +101,11 @@
 
 .link {
   @include mixins.link;
-  font-size: 24px;
   padding: 0px;
 
   i {
     text-align: center;
-    width: 24px;
+    font-size: 8cqw;
   }
 }
 
@@ -114,4 +116,5 @@
   column-gap: 10px;
   font-size: 12px;
   font-weight: 700;
+  font-size: 5cqw;
 }
