fix: save lang in ls, styles; T: 11-02-2025 15:17

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,8 +23,10 @@ body {
   color: var(--clr-fg);
   // background: var(--clr-bg);
   background: var(--bg);
-  background-attachment: fixed;
-  background-size: cover;
+  background-size: cover; /* Масштабирование на весь экран */
+  background-position: center; /* Центрирование */
+  background-repeat: no-repeat; /* Отключаем повтор */
+  background-attachment: fixed; /* Фон остаётся на месте при прокрутке */
 }
 
 ::-moz-selection {
