--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,6 +3,7 @@
   --clr-gray: #666;
   --clr-light-gray: #999;
   --clr-dark-gray: #333;
+  --clr-input-focus: #e8f0fe;
 }
 
 .light {
@@ -13,7 +14,7 @@
   --clr-primary: #38719c;
   --clr-light: #f0f0f0;
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  --bg: url('../../public/assets/img/background.jpg');
+  --bg: #fcfcfc;
 }
 
 .dark {
@@ -25,36 +26,5 @@
   --clr-light: #d4d4fb;
   --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  --bg: url('../../public/assets/img/background_dark.jpg');
+  --bg: #23283e;
 }
-
-// .app  {
-//   --clr-bg: #ffffff;
-//   --clr-bg-alt: #f9f9f9;
-//   --clr-fg: #222222;
-//   --clr-fg-alt: #444444;
-//   --clr-primary: #4a90e2;
-//   --shadow: rgba(0, 0, 0, 0.1) 0px 5px 20px 0px,
-//     rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
-// }
-
-// $clr-bg: #fcfcfc;
-// $clr-bg-alt: #fff;
-// $clr-fg: #555;
-// $clr-fg-alt: #444;
-// $clr-primary: #2978b5;
-// $shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
-// $clr-black: #000;
-// $clr-gray: #666;
-// $clr-light-gray: #999;
-// $clr-dark-gray: #333;
-// $clr-light: #f0f0f0;
-
-// $clr-bg: #23283e;
-// $clr-bg-alt: #2a2f4c;
-// $clr-fg: #bdbddd;
-// $clr-fg-alt: #cdcdff;
-// $clr-primary: #90a0d9;
-// $shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-//   rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
