--- a/src/components/ContactForm/index.module.scss
+++ b/src/components/ContactForm/index.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/vars';
 @use '../../styles/mixins' as mixins;
 
-.contactFormContainer {
+.contactFormWrapper {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background: var(--clr-bg-alt);
   padding: 2rem;
@@ -36,11 +36,21 @@
     font-weight: 600;
     resize: none;
 
+    &:focus {
+      background: var(--clr-input-focus);
+    }
+
     &::placeholder {
       color: var(--clr-light-gray);
       font-weight: 600;
       font-size: 1rem;
     }
+  }
+
+  .btnWrapper {
+    display: flex;
+    align-items: center;
+    gap: 15px;
   }
 }
 
@@ -50,4 +60,92 @@
 
 .btnOutline {
   @include mixins.btnOutline;
+}
+
+/*loader*/
+
+.loader {
+  display: flex;
+  gap: 4px;
+  flex-direction: row;
+}
+
+.loader > div {
+  width: 6px;
+  height: 24px;
+  background-color: var(--clr-primary);
+  animation: infyways-loader-scale 1000ms infinite ease-in-out;
+}
+
+.loader > div:nth-child(1) {
+  animation-delay: 0ms;
+}
+
+.loader > div:nth-child(2) {
+  animation-delay: 333.3333333333333ms;
+}
+
+.loader > div:nth-child(3) {
+  animation-delay: 666.6666666666666ms;
+}
+
+@keyframes infyways-loader-scale {
+  0%,
+  100% {
+    transform: scaleY(1);
+  }
+  50% {
+    transform: scaleY(0.4);
+  }
+}
+
+/*checkmark*/
+
+.checkmarkWrapper {
+  position: relative;
+}
+
+.checkmark:after {
+  animation-duration: 800ms;
+  animation-timing-function: ease;
+  animation-name: checkmark;
+  transform: scaleX(-1) rotate(135deg);
+}
+.checkmark:after {
+  position: absolute;
+  opacity: 1;
+  height: 22px;
+  width: 10px;
+  transform-origin: left top;
+  border-right: 6px solid var(--clr-primary);
+  border-top: 6px solid var(--clr-primary);
+  content: '';
+}
+
+@keyframes checkmark {
+  0% {
+    height: 0;
+    width: 0;
+    opacity: 1;
+  }
+  20% {
+    height: 0;
+    width: 10px;
+    opacity: 1;
+  }
+  40% {
+    height: 22px;
+    width: 10px;
+    opacity: 1;
+  }
+  100% {
+    height: 22px;
+    width: 10px;
+    opacity: 1;
+  }
+}
+
+.errorMessage {
+  text-align: start;
+  line-height: 1;
 }
