--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@
   margin: 0;
   border: 0;
   outline: 0;
-  background-color: inherit;
+
   color: inherit;
   font-family: inherit;
   font-size: inherit;
@@ -21,12 +21,12 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.5;
   color: var(--clr-fg);
-  // background: var(--clr-bg);
-  background: var(--bg);
-  background-size: cover; /* Масштабирование на весь экран */
-  background-position: center; /* Центрирование */
-  background-repeat: no-repeat; /* Отключаем повтор */
-  background-attachment: fixed; /* Фон остаётся на месте при прокрутке */
+  background-color: var(--bg);
+  background-image: url('/public/assets/img/background.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 ::-moz-selection {
@@ -82,4 +82,14 @@ button {
   h1 {
     font-size: 2.6rem;
   }
+}
+
+.background {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background-image: url('/public/assets/img/background.png');
+  z-index: -999;
 }
