refac: changed projects, resume and styles; T: 19-05-2025 13:58

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,6 @@
 :root {
   --clr-black: #000;
-  --clr-gray: #666;
+
   --clr-light-gray: #999;
   --clr-dark-gray: #333;
   --clr-input-focus: #e8f0fe;
@@ -29,4 +29,5 @@
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   --bg: #23283e;
   --clr-border: #62627e;
+  --clr-gray: #bdbddd;
 }
