--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,7 +22,7 @@ body {
   line-height: 1.5;
   color: var(--clr-fg);
   background-color: var(--bg);
-  background-image: url('/public/assets/img/background.png');
+  background-image: url('/assets/img/background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -90,6 +90,6 @@ button {
   height: 100%;
   top: 0px;
   left: 0px;
-  background-image: url('/public/assets/img/background.png');
+  background-image: url('/assets/img/background.png');
   z-index: -999;
 }
