--- a/src/components/About/index.module.scss
+++ b/src/components/About/index.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/vars';
+@use '../../styles/media' as media;
 @use '../../styles/mixins' as mixins;
 
 .center {
@@ -9,8 +10,13 @@
   flex-direction: column;
   margin-top: 3em;
 
+  @include media.mobile {
+    margin-top: 3.8em;
+  }
+
   .aboutNameTitle {
     text-align: center;
+    line-height: 1.1;
   }
 
   .aboutName {
