:refac: styles placeholder and links; T: 11-10-2025 15:04

--- a/src/components/ContactForm/index.module.scss
+++ b/src/components/ContactForm/index.module.scss
@@ -41,7 +41,7 @@
     }
 
     &::placeholder {
-      color: var(--clr-light-gray);
+      color: var(--clr-placeholder);
       font-weight: 600;
       font-size: 1rem;
     }
